--- a/organizacion.html
+++ b/organizacion.html
@@ -144,8 +144,8 @@
                         <li>Base para elaborar cronogramas y horarios semanales.</li>
                     </ul>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-                        <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" target="_blank">Ver Excel</a>
-                        <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" download>Descargar Excel</a>
+                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https://www.victorgutierrezmarcos.es/organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" target="_blank">Ver Excel</a>
+                        <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" download type="application/octet-stream">Descargar Excel</a>
                     </div>
                 </div>
 
@@ -172,8 +172,8 @@
                         <li><strong>Plantilla para elaborar temas cortos</strong> (plantilla de Word): Se trata de una plantilla alternativa por si preferís elaborar temas más esquemáticos en menos páginas.</li>
                     </ul>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-                        <a href="organizacion/1_plantilla_temas_largos.dotx" class="download-btn" download>Descargar plantilla para temas largos</a>
-                        <a href="organizacion/2_plantilla_temas_cortos.dotx" class="download-btn" download>Descargar plantilla para temas cortos</a>
+                        <a href="organizacion/1_plantilla_temas_largos.dotx" class="download-btn" download type="application/octet-stream">Descargar plantilla para temas largos</a>
+                        <a href="organizacion/2_plantilla_temas_cortos.dotx" class="download-btn" download type="application/octet-stream">Descargar plantilla para temas cortos</a>
                     </div>
                 </div>
             </article>
