--- a/organizacion.html
+++ b/organizacion.html
@@ -153,8 +153,8 @@
                     <h4>Estructura del temario</h4>
                     <p>Presentación de PowerPoint que propone una manera de estructurar el temario con los temas del tercer y cuarto ejercicio (considero que puede ser útil para tener una visión global del temario).</p>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-                        <a href="organizacion/ver-presentacion.html" class="download-btn" target="_blank">Ver Presentación</a>
-                        <a href="organizacion/estructura_temario.ppsx" class="download-btn" download>Descargar Presentación</a>
+                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https://www.victorgutierrezmarcos.es/organizacion/estructura_temario.ppsx" class="download-btn" target="_blank">Ver Presentación</a>
+                        <a href="organizacion/estructura_temario.ppsx" class="download-btn" download type="application/octet-stream">Descargar Presentación</a>
                     </div>
                 </div>
 
