--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -54,73 +54,6 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#5F2987">
 
-    <style>
-        .options-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-top: 2rem;
-            font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-        }
-
-        .option-card {
-            background-color: var(--color-bg-cream, #faf9f6);
-            border: 1px solid var(--color-border, #c8d8c0);
-            border-top: 4px solid var(--color-primary, #5F2987); /* Borde superior PÚRPURA */
-            border-radius: 6px;
-            padding: 2rem;
-            text-decoration: none;
-            color: var(--color-text, #2d2d2d);
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            box-shadow: var(--shadow-sm, 0 1px 3px rgba(0, 0, 0, 0.08));
-            height: 100%;
-            box-sizing: border-box;
-        }
-
-        /* Efecto Hover */
-        .option-card:hover {
-            transform: translateY(-4px);
-            box-shadow: var(--shadow-lg, 0 8px 30px rgba(0, 0, 0, 0.12));
-            background-color: #fff;
-            border-color: var(--color-primary-light, #7a3ca8);
-        }
-
-        .card-icon {
-            width: 42px;
-            height: 42px;
-            margin-bottom: 1rem;
-            color: var(--color-primary, #5F2987); /* Iconos en Púrpura */
-            transition: transform 0.3s ease;
-        }
-
-        .option-card:hover .card-icon {
-            transform: scale(1.1);
-        }
-
-        .card-title {
-            font-size: 1.4rem;
-            font-weight: 600;
-            margin: 0 0 0.75rem 0;
-            color: var(--color-text, #2d2d2d);
-            letter-spacing: 0.01em;
-        }
-
-        .card-description {
-            font-size: 1.05rem;
-            color: var(--color-text-muted, #555555);
-            line-height: 1.6;
-            margin: 0;
-            font-family: var(--font-body);
-        }
-
-        /* Decoración del título al hacer hover */
-        .option-card:hover .card-title {
-            color: var(--color-primary, #5F2987);
-        }
-    </style>
 </head>
 <body>
     <header class="site-header">
@@ -150,22 +83,21 @@
                 
                 <h2 class="section-title">Primer ejercicio</h2>
                 
-                <div class="options-grid">
-                    <a href="primer-ejercicio/test.html" class="option-card">
-                        <svg class="card-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m0 0H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V9.375c0-.621-.504-1.125-1.125-1.125H8.25z" />
-                        </svg>
-                        <h3 class="card-title">Test</h3>
-                        <p class="card-description">Recopilación de preguntas tipo test para practicar.</p>
-                    </a>
-
-                    <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank" class="option-card">
-                        <svg class="card-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5m.75-9l3-3 2.148 2.148A12.061 12.061 0 0116.5 7.605" />
-                        </svg>
-                        <h3 class="card-title">Dictamen de coyuntura</h3>
-                        <p class="card-description">Guía para la elaboración del dictamen de coyuntura económica.</p>
-                    </a>
+                <div class="cards-grid">
+                    <div class="tema-card">
+                        <a href="primer-ejercicio/test.html">
+                            <span class="tema-card-number">Parte I</span>
+                            <h3 class="tema-card-title">Test</h3>
+                            <p class="tema-card-desc">Recopilación de preguntas tipo test para practicar</p>
+                        </a>
+                    </div>
+                    <div class="tema-card">
+                        <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank">
+                            <span class="tema-card-number">Parte II</span>
+                            <h3 class="tema-card-title">Dictamen de coyuntura</h3>
+                            <p class="tema-card-desc">Guía para la elaboración del dictamen de coyuntura económica</p>
+                        </a>
+                    </div>
                 </div>
 
             </article>
