Add featured card styles and update test page layout
Introduced new CSS classes for two-column card grids and featured cards, including a badge style. Updated 'primer-ejercicio.html' and 'test.html' to use the new grid and featured card styles, highlighting the interactive exam simulator as 'En desarrollo'.

--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -83,7 +83,7 @@
                 
                 <h2 class="section-title">Primer ejercicio</h2>
                 
-                <div class="cards-grid">
+                <div class="cards-grid-half">
                     <div class="tema-card">
                         <a href="primer-ejercicio/test.html">
                             <span class="tema-card-number">Parte I</span>
