--- a/temario/primer-ejercicio/test.html
+++ b/temario/primer-ejercicio/test.html
@@ -44,7 +44,7 @@
                 
                 <h2 class="section-title">Test</h2>
                 
-                <div class="cards-grid">
+                <div class="cards-grid-half">
                     <div class="tema-card">
                         <a href="test/examenes_oficiales_test.pdf" target="_blank">
                             <span class="tema-card-number">PDF</span>
@@ -52,7 +52,8 @@
                             <p class="tema-card-desc">Descarga los exámenes de convocatorias anteriores en formato PDF</p>
                         </a>
                     </div>
-                    <div class="tema-card">
+                    <div class="tema-card tema-card--featured">
+                        <span class="tema-card-badge">En desarrollo</span>
                         <a href="test/simulador.html">
                             <span class="tema-card-number">Interactivo</span>
                             <h3 class="tema-card-title">Simulador de examen</h3>
