Update settings, index content, and add new PDF
Expanded allowed Bash commands in .claude/settings.local.json, updated descriptions in index.html for clarity, and added the latest official test PDF to the test directory.

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                 <a href="blog/index.html">
                     <span class="tema-card-number">Artículos</span>
                     <h3 class="tema-card-title">Blog</h3>
-                    <p class="tema-card-desc">Reflexiones y artículos sobre economía, administración pública y otros temas</p>
+                    <p class="tema-card-desc">Reflexiones y artículos sobre política económica y comercio</p>
                 </a>
             </div>
             <div class="tema-card">
                 <a href="sobre-mi.html">
                     <span class="tema-card-number">Contacto</span>
                     <h3 class="tema-card-title">Sobre mí</h3>
-                    <p class="tema-card-desc">Información sobre mi trayectoria y formas de contacto</p>
+                    <p class="tema-card-desc">Información y formas de contacto</p>
                 </a>
             </div>
         </div>
