Update materials and cleanup workflow
Expanded the workflow to delete .md files, updated the section title in index.html, replaced the official test PDF, and removed the outdated updated test PDF.

--- a/oposicion/index.html
+++ b/oposicion/index.html
@@ -132,7 +132,7 @@
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <h2 class="section-title">OPOSICIÓN TCEE</h2>
+                <h2 class="section-title">MATERIALES PARA LA PREPARACIÓN DE LA OPOSICIÓN A TCEE</h2>
 
                 <div class="content-text">
                     <p>En esta sección encontrarás:</p>
