--- a/oposicion/temario/cuarto-ejercicio.html
+++ b/oposicion/temario/cuarto-ejercicio.html
@@ -83,8 +83,8 @@
             font-weight: 500;
         }
         .badge-parcial {
-            background: #fff3cd;
-            color: #856404;
+            background: #ffe0d6;
+            color: #c44536;
             font-size: 0.7em;
             padding: 2px 6px;
             border-radius: 4px;
