Update tema link generation and settings for test simulator
Enhanced the tema link generation in simulador.html to point directly to the corresponding PDF files using a new filename format. Updated .claude/settings.local.json to include 'Bash(pip3 list:*)' in the allowed commands. Updated the official test PDF with new content.

--- a/oposicion/temario/primer-ejercicio/test/simulador.html
+++ b/oposicion/temario/primer-ejercicio/test/simulador.html
@@ -1735,8 +1735,15 @@
                 });
                 
                 const temasNombres = pregunta.temas.map(t => {
-                    const numTema = t.replace('3.A.', '').replace('3.B.', '');
-                    return `<a href="../../tercer-ejercicio.html" target="_blank" class="temas-tag" title="Ver tema ${numTema} del tercer ejercicio">${t}: ${datosTest.temas[t]}</a>`;
+                    // Convert "3.A.1" to "3A01" for the PDF filename
+                    const match = t.match(/3\.([AB])\.(\d+)/);
+                    if (match) {
+                        const parte = match[1];
+                        const numTema = match[2].padStart(2, '0');
+                        const pdfFile = `3${parte}${numTema}.pdf`;
+                        return `<a href="../../tercer-ejercicio/${pdfFile}" target="_blank" class="temas-tag" title="Ver tema ${match[2]} del tercer ejercicio">${t}: ${datosTest.temas[t]}</a>`;
+                    }
+                    return `<span class="temas-tag">${t}: ${datosTest.temas[t]}</span>`;
                 }).join('');
                 
                 const origenText = examen ? `${examen.nombre} - Pregunta ${pregunta.numero}` : 'Pregunta de elaboración propia';
