Add Firebase authentication and exam history features
Integrates Firebase authentication with Google sign-in, adds user profile modal, and enables saving and viewing exam results in Firestore. Updates index.html and simulador.html to load Firebase SDKs and new scripts. Adds simulator-history.js for managing exam history, updates styles for authentication UI, and documents new cookies in the cookie policy.

--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -431,6 +431,12 @@
                                 <td>Distingue usuarios durante la sesión</td>
                                 <td>24 horas</td>
                             </tr>
+                            <tr>
+                                <td><code>firebase:authUser:*</code></td>
+                                <td>Google Firebase</td>
+                                <td>Mantiene la sesión del usuario iniciada de forma segura</td>
+                                <td>Persistente</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
