Add Comunidad page and update navigation menus
Created comunidad.html to introduce a new community section. Updated navigation menus across all pages to include a link to the Comunidad page. Added a newsletter subscription box to the blog index. This enhances user engagement and provides a central place for community interaction.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <li><a href="index.html" class="active">INICIO</a></li>
                 <li><a href="oposicion/index.html">OPOSICIÓN</a></li>
                 <li><a href="blog/index.html">BLOG</a></li>
+                <!-- <li><a href="comunidad.html">COMUNIDAD</a></li> -->
                 <li><a href="sobre-mi.html">SOBRE MÍ</a></li>
             </ul>
         </div>
