--- a/oposicion/temario.html
+++ b/oposicion/temario.html
@@ -142,6 +142,7 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="index.html" class="active">OPOSICIÓN</a></li>
                 <li><a href="../blog/index.html">BLOG</a></li>
+                <!-- <li><a href="../comunidad.html">COMUNIDAD</a></li> -->
                 <li><a href="../sobre-mi.html">SOBRE MÍ</a></li>
             </ul>
         </div>
