--- a/404.html
+++ b/404.html
@@ -224,6 +224,7 @@
                 <li><a href="/index.html">INICIO</a></li>
                 <li><a href="/oposicion/index.html">OPOSICIÓN</a></li>
                 <li><a href="/blog/index.html">BLOG</a></li>
+                <!-- <li><a href="comunidad.html">COMUNIDAD</a></li> -->
                 <li><a href="/sobre-mi.html">SOBRE MÍ</a></li>
             </ul>
         </div>
