--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -90,6 +90,7 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="oposicion/index.html">OPOSICIÓN</a></li>
                 <li><a href="blog/index.html">BLOG</a></li>
+                <!-- <li><a href="comunidad.html">COMUNIDAD</a></li> -->
                 <li><a href="sobre-mi.html" class="active">SOBRE MÍ</a></li>
             </ul>
         </div>
