--- a/oposicion/temario/primer-ejercicio.html
+++ b/oposicion/temario/primer-ejercicio.html
@@ -174,5 +174,14 @@
     <script src="../../search-ui.js"></script>
     <script src="../../course-banner.js"></script>
     <script src="../../cookie-consent.js"></script>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
+    <!-- Configuración y Lógica de Auth -->
+    <script src="../../firebase-config.js"></script>
+    <script src="../../auth.js"></script>
 </body>
 </html>
