--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -552,5 +552,14 @@
     <script src="search-engine.js"></script>
     <script src="search-ui.js"></script>
     <script src="cookie-consent.js"></script>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
+    <!-- Configuración y Lógica de Auth -->
+    <script src="firebase-config.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
