Add social sharing and exam exit protection features
Added social sharing buttons with styles and JavaScript handlers to blog articles. Improved the test simulator by implementing protection against accidental page exit during exams, warning users before leaving or refreshing. Also updated index.html to emphasize home card descriptions with <em> tags.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <span class="home-card-label">Recursos</span>
                     <h3 class="home-card-title">Oposición a TCEE</h3>
-                    <p class="home-card-desc">Temario, materiales y recursos gratuitos para preparar la oposición a Técnico Comercial y Economista del Estado</p>
+                    <p class="home-card-desc"><em>Temario, materiales y recursos gratuitos para preparar la oposición a Técnico Comercial y Economista del Estado</em></p>
                     <span class="home-card-cta">Explorar recursos <span class="cta-arrow">→</span></span>
                 </a>
             </div>
@@ -103,7 +103,7 @@
                     </div>
                     <span class="home-card-label">Artículos</span>
                     <h3 class="home-card-title">Blog</h3>
-                    <p class="home-card-desc">Reflexiones y análisis sobre política económica y comercio internacional</p>
+                    <p class="home-card-desc"><em>Reflexiones y análisis sobre política económica y comercio internacional</em></p>
                     <span class="home-card-cta">Leer artículos <span class="cta-arrow">→</span></span>
                 </a>
             </div>
@@ -117,7 +117,7 @@
                     </div>
                     <span class="home-card-label">Contacto</span>
                     <h3 class="home-card-title">Sobre mí</h3>
-                    <p class="home-card-desc">Información profesional y formas de contacto</p>
+                    <p class="home-card-desc"><em>Información profesional y formas de contacto</em></p>
                     <span class="home-card-cta">Conocer más <span class="cta-arrow">→</span></span>
                 </a>
             </div>
