--- a/oposicion/index.html
+++ b/oposicion/index.html
@@ -162,7 +162,7 @@
                     <ul>
                         <li>La <a href="https://atcee.es/la-oposicion-tcee/" target="_blank">web de la Asociación de Técnicos Comerciales y Economistas del Estado</a> incluye toda la información relevante sobre el proceso y las funciones del cuerpo.</li>
                         <li>En <a href="https://www.icex-ceco.es/empleados-publicos" target="_blank">ICEX-CECO</a> se organizan grupos de preparación de la oposición.</li>
-                        <li>La Escuela Ciudadana de Administración Pública (<a href="https://www.ecap.es/hazte-alumna" target="_blank">ECAP</a>) organiza un programa de formación presencial, gratuito, y que tiene un carácter teórico y práctico, impartido por funcionarios y funcionarias públicas.</li>
+                        <li>La Escuela Ciudadana de Administración Pública (<a href="https://www.ecap.es/hazte-alumna" target="_blank">ECAP</a>) organiza un programa de formación presencial, gratuito, y que tiene un carácter teórico y práctico, impartido por funcionarios públicos.</li>
                     </ul>
 
                     <p>Puedes escribirme a <a href="mailto:contacto@victorgutierrezmarcos.es" class="contact-link">contacto@victorgutierrezmarcos.es</a>.</p>
